@@ -272,7 +272,7 @@ not use the surface alpha values.
 
 <a name=convert><font size=+2><b>convert
 </b></font><br><font size=+1><tt>
-Surface.convert([src_surface] OR depth, [flags] OR masks) -> Surface
+Surface.convert([src_surface]) -> Surface
 </tt></font><ul>
 Creates a new copy of the surface with the desired pixel format.
 Surfaces with the same pixel format will blit much faster than
