@@ -80,8 +80,7 @@ load a new MPEG stream</td></tr>
 pygame.movie.Movie(file) -> Movie
 </tt></font><ul>
 Loads a new movie stream from a MPEG file. The file
-argument is either a filename, or an opened file object.
-Movies cannot stream from any other python objects.
+argument is either a filename, or any python file-like object
 </ul><br>&nbsp;<br>
 
 
